# varia-db

./: Cargo.toml  README.md  dockerfile  openapi.yaml  openapi.yml
.cargo/: config.toml
.github/workflows/: container.yml  main.yml  pull_request.yml  release.yml  testing.yml
src/: lib.rs  main.rs  server.rs  setup.rs  store.rs
src/server/: engine_service.rs  mod.rs  request.rs  respond.rs  server.rs  web_server.rs
src/server/protocol/: mod.rs  pathing.rs  respond.rs
src/server/utils/: bytes_utils.rs  http_utils.rs  mod.rs
src/store/: disk.rs  engine.rs  mod.rs  primary.rs  secondary.rs  value.rs  weight.rs
src/store/secondary/: content.rs  disk.rs  helpers.rs  mod.rs
tests/: disk_test.rs  mod.rs
tests/server/: engine_service_test.rs  mod.rs
tests/store/: disk_test.rs  engine_test.rs  mod.rs
