[package]
name = "varia-db"
version = "0.0.1-snapshot"
edition = "2021"

[dependencies]
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.2", features = ["full"] }
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
simple_logger = "4.3.0"
tokio =  { version = "1.35.1", features = ["full"] }
