[package]
name = "varia-db"
version = "0.0.2"
edition = "2021"

[dependencies]
tokio =  { version = "1.35.1", features = ["full"] }
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.2", features = ["full"] }
http-body-util = "0.1.0"

log = "0.4.20"
simple_logger = "4.3.0"

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
postcard = { version = "1.0.8", features = ["alloc"] }

moka = { version = "0.12.2", features = ["future"] }
